Removing sonar-tools and switching to config driven extraction

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-sonar_migration==0.2.0
-markdown
+pytest
+orjson
+httpx
+respx
+uvloop
+pytest-asyncio
+greenlet
+gevent
+jsonpath-ng
 click
+markdown
