--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,16 +18,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to DockerHub
-      - name: Log in to DockerHub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      # Log in to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       # Build the Docker image using the Dockerfile in the repo
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sonar-reports:latest .
+          docker build -t ghcr.io/${{ github.repository_owner }}/sonar-reports:latest .
 
-      # Push the Docker image to DockerHub
-      - name: Push Docker image to DockerHub
+      # Push the Docker image to GitHub Container Registry
+      - name: Push Docker image to GitHub Container Registry
         run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/sonar-reports:latest
+          docker push ghcr.io/${{ github.repository_owner }}/sonar-reports:latest
+
