--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,10 @@ jobs:
       # Build the Docker image using the Dockerfile in the repo
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/sonar-reports:latest .
+          docker build -t ghcr.io/sonarsource-semos/sonar-reports:latest .
 
       # Push the Docker image to GitHub Container Registry
       - name: Push Docker image to GitHub Container Registry
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/sonar-reports:latest
+          docker push ghcr.io/sonarsource-demos/sonar-reports:latest
 
