Updating the Report format to support multiple instances

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   extract:
     build: .
     command:
-      - "report"
+      - "extract"
       - ""
       - ""
       - "--timeout=60"
